--- a/writings/notecards.org
+++ b/writings/notecards.org
@@ -1596,7 +1596,7 @@ felt, and thereby highly phantasmic and labile relation to these
 categories. Identification is the psychic process that makes the
 interval between the individual and the social apparent; it is not the
 site of their suture." (Amin 115).
-**** TODO Amin, Kadji. “Taxonomically Queer? Sexology and New Queer, Trans, and Asexual Identities.” GLQ: A Journal of Lesbian and Gay Studies, vol. 29, no. 1, 2023, pp. 91–107.
+**** Amin, Kadji. “Taxonomically Queer? Sexology and New Queer, Trans, and Asexual Identities.” GLQ: A Journal of Lesbian and Gay Studies, vol. 29, no. 1, 2023, pp. 91–107.
 
 About how we categorize gender.
 
@@ -1638,7 +1638,8 @@ Taxonomy a tactic of white supremacy:
   as constitutively and polymorphously perverse populations (Ross
   2005; Driskill 2016)." (Amin, "Taxonomically" 95).
 
-Can taxonomy be queered? According to Love?
+Framing queering of taxonomy within debates in Black, Decolonial, Mad
+Studies. 
 - "In light of this noxious history, is it even conceivable to put a
   queer spin on taxonomy? This question dovetails with methodological
   debates in queer studies that ask if scientific and social
@@ -1680,7 +1681,6 @@ being biologically rooted.
   backward, the traditional, or the false conflation." (Amin,
   "Taxonomically" 101).
 
-
 Dis-identification as a strategy for working within these taxonomies
 - "I want to acknowledge the creative and resourceful ways in which
   Indigenous and racialized people “dis-identify” with these
@@ -1692,9 +1692,6 @@ Dis-identification as a strategy for working within these taxonomies
   and even that, racially speaking, they may not have access to
   cisgender binaries or ideals about “healthy” levels of sexual desire
   in the first place" (Amin, "Taxonomically" 103).
-
-
-Dis-identification as a strategy for working within these taxonomies
 
 "Whether or not scholars critique it, however, the queer taxonomical
 imaginary is likely here to stay. I, for one, find the growing
@@ -1715,16 +1712,14 @@ translations that explode the epistemological and ontological
 foundations of taxonomy itself. That, I think, would be an ethical
 scholarly approach to new queer, trans, and asexual taxonomies."
 
-
 **** Adair, Cassius, Cameron Awkward-Rich, Amy Marvin; Before Trans Studies. /TSQ/ 1 August 2020; 7 (3): 306–320. doi: https://doi.org/10.1215/23289252-8552922
-
 Trans Studies founders because of the academy that cannot fund
 scholars who therefore cannot afford to write. Those in positions of
 power therefore hire queer theorists to do trans work.
 - "Put bluntly, the“great failure”of trans studiesis that we can’t
   all afford to write" (309).
 
-Normativity is actually discussed often. See Prosser, "Viviane Namaste
+Normativity is actually discussed often. See Prosser, Viviane Namaste
 (2000, 2009), C. Jacob Hale (1997, 1998), Trish Salah (2007,2009),
 Henry Rubin (1998a), Talia Bettcher (2014), and every 1990s trans
 com-munity newsletter" (310). )
@@ -1748,7 +1743,7 @@ blackness, beyond epidermalization.
 
 "Might it mean that arriving at, or near, that Spillersian 'place for
 this different social subject' will be a place that many of y'all may
-not be readin gfor, an abolitionist place that does not abide the
+not be reading for, an abolitionist place that does not abide the
 trappings of legibility you snuggle with even when trying to bring
 about a radically just world?" (xv).
 
@@ -1760,11 +1755,11 @@ through violent means to remain on this side" (18).
 they/them, or a disrespect for cisgender and its coerced alignment, at
 the gendered level of blackness" (54).
 
-"What I am trying to suggest in a language that takes on the tneor of
+"What I am trying to suggest in a language that takes on the tenor of
 its source is how language spun through the annals of blackness by
 what we can tentatively call black folks, or black milius, allows for
-another possible subject to emerge not simply when the subject
-isunknown but when the subject is 'known' but not captured. In other
+another possible subject to emerge not simply when the subject is
+unknown but when the subject is 'known' but not captured. In other
 words, they ain't gotta be unknown to be 'they,' and in the
 possibility of being they yet known, thye become possible in another
 kind of way" (55).
@@ -1815,7 +1810,6 @@ through one another is one in which we give up knowlege of the other"
 knowledge of someone or something in its entirety. Love can arise in,
 precisely, the not knowing" (145).
 **** Chu, Andrea Long, and Emmett Harsin Drager. "After trans studies." Transgender Studies Quarterly 6.1 (2019): 103-116.
-
 Trans studies is not / has not been what it could be. It has been
 aborted, absorbed by queer studies before its birth, and now consigned
 to extend queer's doomed project of boundary-crossings. Trans Studies
@@ -1871,8 +1865,7 @@ Chu's critique of Sandy Stone's "Empire":
     unexpected. Satire, not tragedy or romance.
     - "Trying to learn to write without optimism, or how to be
       optimistic without being hopeful".
-
-
+      
 → This is interesting. I’m thinking of Orlando, which my students call
 a transgender novel, even though I never game them that term. “Gender
 reveal” rather than “sex change”. Woolf parodizes biography and gender
@@ -1882,8 +1875,6 @@ the end, when the ghosts come back from the dead. The message seems to
 be that the imagination will obliterate time.
 
 **** Keegan, Cáel M., Against Queer Theory. TSQ 1 August 2020; 7 (3): 349–353. doi: https://doi.org/10.1215/23289252-8552978
-
-
 Trans Studies has always been within Queer Theory's shadow. The
 assumptions and premises from Queer Theory have been siphoned into
 Trans, when Trans needs the space to articulate itself. 
@@ -1901,9 +1892,7 @@ abrasive conditions, how to remain willing to engage in the service of
 “a new hope” (Snorton 2009: 88)—even when it feels like our back is
 against the door" (352).
 
-**** Halberstam, Jack. "Nice trannies." Transgender Studies Quarterly
-7.3 (2020): 321-331.
-
+**** Halberstam, Jack. "Nice trannies." Transgender Studies Quarterly 7.3 (2020): 321-331.
 Chu willfully misreads Trans Studies, its disagreements, its
 significant debates. We are not all females. The Lesbian Phallus
 disproves female as a lack, which Butler already has shown. Our enemy
@@ -1912,10 +1901,7 @@ should be men, not butches. The beneficiaries of hetero-patriarchy.
 Why does Chu hate butches? (probably because they disavow their
 femininity?) 
 
-**** Travers, Travers. "Trans Studies and Resistance in an Academy
-Based on Masculinity Contest Culture." TSQ: Transgender Studies
-Quarterly 7.3 (2020): 407-420.
-
+**** Travers, Travers. "Trans Studies and Resistance in an Academy Based on Masculinity Contest Culture." TSQ: Transgender Studies Quarterly 7.3 (2020): 407-420.
 Academic culture continues to be hostile to trans femmes, and
 particularly trans femmes of color, via "modern/neoliberal
 organizational logics" (409). Organizational cultures are masculinity
@@ -1927,13 +1913,29 @@ document how masculinity and contest culture has necropolitical
 consequences.
 
 **** Susan Stryker’s “Transgender Studies: Queer Theory’s Evil Twin”
+Gender vs sexuality as an organizing trope for inquiry. Queer often
+means LGB, not T. We need to restructure our understanding of gender,
+rather than sexuality.
 
-Gender vs sexuality as an organizing trope for inquiry. Queer often means LGB, not T. We need to restructure our understanding of gender, rather than sexuality.
+"A decade later, with another Bush in the White House and another war in
+the Persian Gulf, it is painfully apparent that the queer revolution of the early
+1990s yielded, at best, only fragile and tenuous forms of liberal progress in certain
+sectors and did not radically transform society — and as in the broader world, so
+too in the academy" (213).
 
-How can we frame our inquiry around desire? “Enacting a new wedding of the narrative of self and flesh? (213)
+How can we frame our inquiry around desire? “Enacting a new wedding of
+the narrative of self and flesh? (213)
+
+
+"If the history and anthropology of gender and sexuality teach us
+anything, it is that human culture has created many ways of putting
+together bodies, subjectivities, social roles, and kinship structures
+— that vast apparatus for producing intelligible personhood that we
+call “gender.” It is appallingly easy to reproduce the power
+structures of colonialism by subsuming non-Western con- figurations of
+personhood into Western constructs of sexuality and gender" (214).
 
 **** Jasbir Puar’s “Becoming Trans, Becoming Disabled”
-
 trans(homo)nationalism --- fading into the population, being coopted for neoliberal mandates of productivity, capacitated bodies. 
 
 Puar is about dissolving categories, seeking out ontological irreducibilities. 
@@ -1950,14 +1952,17 @@ Trans as a prefix, preposition, that indicates movement, mattering, becoming. Tr
 
 In computer code, asterisk isn’t making things bold (that’s only in markdown language), but an asterisk is a wildcard symbol. It can stand for anything, like *.pdf is all pdfs. 
 
-Thinking of “trapped in the wrong body” not as feeling of disembodiment/dysphoria (which props up heteronormative bodies as desirable) but trap as in weaving, unwinding, a net or mesh? Now we are thinking about textures and spacetime. Less about normativity and more about prefixial movements.
+Thinking of “trapped in the wrong body” not as feeling of
+disembodiment/dysphoria (which props up heteronormative bodies as
+desirable) but trap as in weaving, unwinding, a net or mesh? Now we
+are thinking about textures and spacetime. Less about normativity and
+more about prefixial movements.
+
 Goes directly against ALC saying that trans assumes a desire for the normative, and deals with its inevitable frustration. 
 
 See Katie King TRANimalitieS --- trans as a condition of speculation and distributed cognition in computer games. 
 
-**** TODO Prosser, Jay. /Second Skins: The Body Narratives of
-Trannsexuality/, Columbia U Press, 1998. 
-
+**** TODO Prosser, Jay. /Second Skins: The Body Narratives of Trannsexuality/, Columbia U Press, 1998. 
 Prosser's main argument is that queer theory, and gender
 performativity in particular, has relied on transgender
 identification in ways that elide the specificity of the trans body. 
@@ -1967,7 +1972,22 @@ transsexuality... to put into narrative its remarkable bodily
 trajectories" (4). 
 
 Goal is to read the materiality of transsexual body into narratives:
-"To bring into view the mateirality of the body" (12).  
+"To bring into view the mateirality of the body" (12).
+
+Being trans isn't about making constant disruptions (a la queer
+theory), but about finding your way back to the materiality of the
+body: 
+- "If, for queer theory, transition is to be explored in terms of its
+  deconstructive effects on the body and identity (transition as a
+  symptom of the constructedness of the sex/gender system and a figure
+  for the impossibility of this system's achievement of identity), I
+  read transsexual narratives to consider how transition may be the
+  very route to identity and bodily integrity. In transsexual accounts
+  transition does not shift the subject away from the embodiment of
+  sexual difference but more fully into it" (Prosser 6).
+- "transsexual and transgendered narratives alike produce not the
+  revelation of the fictionality of gender categories but the sobering
+  realization of their ongoing foundational power" (Prosser 11).
 
 Critique of Butler and queer theory generally: Butler considers
 "transitions as discursive but not explored in the bodiliness of
@@ -2053,9 +2073,8 @@ From Judith Halberstam's review:
    limits of performativity in relation to the transsexual drag queens
    in Jennie Livingston's film /Paris is Burning/." (314-315)
 
-**** Stryker, White. /The Transgender Studies
-   Reader/. Routeledge. 2006. 
-
+**** TODO Stryker, Susan. /The Transgender Studies Reader/. Routeledge. 2006. 
+**** TODO Keegan, Cael M. "Transgender Studies, or How to Do Things with Trans*" in 
 *** Archives
 **** Arondekar, A., Cvetkovich, A., Hanhardt, CB, Kunzel, R., Nyong’O, T.,
 Rodríguez, JM, & Stryker, S. (2015). Queering archives: A roundtable
@@ -3946,6 +3965,21 @@ Correlation
   inequalities" (57).
 
 Homophily
+- "The similarly polaized filings gathered at either pole repel one
+  another, but they are stuck together by their overwhelming
+  attraction to their opposite pole (figure 23). Sustaining this
+  magnetic polarization in usually nonmagnetic materials requires a
+  magnet or a constant current (figures 24 and 25). Social media
+  “neighborhoods” are like these clusters of magnetically polarized
+  iron filings, in which similarly polarized filings both repel one
+  another and stick together through their overwhelming attraction to
+  their opposite pole. As feminist and queer theorist Sara Ahmed has
+  argued, to bind together “I’s” into a “threatened” “we,” hatred
+  needs the other.13 Remarkably, this hatred is rephrased as “love,”
+  as “homophily”: modern white supremacists, for example, claim not to
+  hate others but to “love” their own.14 They prove their “love,”
+  however, by hating others, whose world they try to unmake through
+  pain and harm." (85).)
 - "network science reduces real-world phenomena into a series of
   'nodes' and 'edges,' which are, in turn, regenerated to reveal the
   causes of seemingly disparate behaviors, from friendships to
